--- a/app/src/main/res/layout/import_contacts.xml
+++ b/app/src/main/res/layout/import_contacts.xml
@@ -11,14 +11,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
-
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/import_contacts_list"
+    <LinearLayout
+            android:id="@+id/import_contacts_main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            tools:listitem="@layout/import_contacts_list_item"/>
+            android:orientation="vertical">
 
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/import_contacts_list"
+                android:layout_width="match_parent"
+                android:layout_height="0px"
+                android:layout_weight="1"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                tools:listitem="@layout/import_contacts_list_item"/>
+        <Button
+                android:id="@+id/import_contacts_add_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/add"/>
+    </LinearLayout>
 
 
 </FrameLayout>
