--- a/app/src/main/res/layout/import_contacts.xml
+++ b/app/src/main/res/layout/import_contacts.xml
@@ -2,9 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
-             android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:titleTextColor="@android:color/white" />
 
     <ProgressBar
             android:id="@+id/import_contacts_progress_bar"
@@ -15,6 +21,7 @@
             android:id="@+id/import_contacts_main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingTop="?attr/actionBarSize"
             android:orientation="vertical">
 
         <android.support.v7.widget.RecyclerView
