--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#4CAF50</color>
+    <color name="colorAccent">@color/green_300</color>
+    <color name="semi_transparent">#66000000</color>
+    <color name="green_900">#1B5E20</color>
+    <color name="green_700">#388E3C</color>
+    <color name="green_300">#81C784</color>
+    <color name="grey_400">#BDBDBD</color>
+    <color name="grey_600">#757575</color>
 </resources>
