--- a/app/src/main/res/layout/players_list.xml
+++ b/app/src/main/res/layout/players_list.xml
@@ -3,19 +3,22 @@
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@color/grey_1">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/player_list_item"
+            android:layout_margin="16dp"
+            tools:listitem="@layout/article_list_item"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
     <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
 </FrameLayout>
