--- a/app/src/main/res/layout/match_list.xml
+++ b/app/src/main/res/layout/match_list.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/player_list_root"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/player_list"
+            android:id="@+id/match_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/player_list_item"
+            android:visibility="gone"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 
     <ProgressBar
-            android:id="@+id/progress_bar"
+            android:id="@+id/match_list_progress_bar"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
     <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/match_list_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
@@ -30,28 +29,27 @@
             app:srcCompat="@drawable/ic_add_white_24dp"/>
 
     <LinearLayout
-            android:id="@+id/player_list_empty_state"
+            android:id="@+id/match_list_empty_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center">
 
         <ImageView
-                android:id="@+id/player_list_empty_image"
+                android:id="@+id/match_list_empty_image"
                 android:layout_width="256dp"
                 android:layout_height="256dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/peter_beardsley"/>
+                android:src="@drawable/fives"/>
         <TextView
-                android:id="@+id/player_list_empty_message"
+                android:id="@+id/match_list_empty_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textSize="24sp"
-                tools:text="No players"/>
+                android:text="@string/no_matches_message"/>
 
 
     </LinearLayout>
-
 </FrameLayout>
