--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/contrail_one_regular</item>
+        <item name="android:editTextColor">@color/grey_400</item>
     </style>
 
     <style name="AppTheme" parent="BaseAppTheme">
