--- a/app/src/main/res/layout/players_list.xml
+++ b/app/src/main/res/layout/players_list.xml
@@ -1,57 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/player_list_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" tools:layout_editor_absoluteY="25dp"
+        tools:layout_editor_absoluteX="0dp">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/player_list_item"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"/>
 
     <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"
             android:visibility="gone"/>
+
+    <ImageView
+            android:id="@+id/player_list_empty_image"
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/peter_beardsley"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/player_list_empty_message"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.5"/>
+
+    <TextView
+            android:id="@+id/player_list_empty_message"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="24sp"
+            tools:text="No players"
+            android:layout_marginTop="16dp"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@+id/player_list_empty_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"/>
+
+
+    <android.support.constraint.Group
+            android:id="@+id/player_list_empty_view_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:constraint_referenced_ids="player_list_empty_image, player_list_empty_message"
+            tools:visibility="visible"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_add_white_24dp"/>
-
-    <LinearLayout
-            android:id="@+id/player_list_empty_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
-
-        <ImageView
-                android:id="@+id/player_list_empty_image"
-                android:layout_width="256dp"
-                android:layout_height="256dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/peter_beardsley"/>
-        <TextView
-                android:id="@+id/player_list_empty_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="24sp"
-                tools:text="No players"/>
+            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:layout_margin="16dp"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="0dp"/>
 
 
-    </LinearLayout>
-
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
