--- a/app/src/main/res/layout/players_list.xml
+++ b/app/src/main/res/layout/players_list.xml
@@ -60,7 +60,6 @@
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="parent"/>
 
-
     <android.support.constraint.Group
             android:id="@+id/player_list_empty_view_group"
             android:layout_width="wrap_content"
@@ -69,13 +68,13 @@
             tools:visibility="visible"/>
 
     <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/player_list_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_add_white_24dp"
             android:layout_margin="16dp"
+            app:srcCompat="@drawable/ic_add_white_24dp"
             app:layout_constraintEnd_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="0dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
