--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -8,64 +8,58 @@
         android:layout_height="match_parent"
         tools:context=".main.MainActivity">
 
-
     <android.support.v7.widget.Toolbar
             android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:elevation="4dp"
             android:theme="?attr/actionBarTheme"
-            app:popupTheme="?attr/actionBarPopupTheme"/>
+            app:popupTheme="?attr/actionBarPopupTheme"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+    <android.support.constraint.Group
+            android:id="@+id/main_content_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:constraint_referenced_ids="main_content_container,main_bottom_navigation"
+            tools:visibility="visible"/>
 
-    <RelativeLayout
-            android:id="@+id/main_content"
+    <FrameLayout
+            android:id="@+id/main_content_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"/>
+
+    <android.support.design.widget.BottomNavigationView
+            android:id="@+id/main_bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/main_toolbar">
-        <include
-                android:id="@+id/main_players_list_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/main_bottom_navigation"
-                layout="@layout/players_list"
-                tools:visibility="visible"
-        />
-
-        <include
-                android:id="@+id/main_create_match_layout"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:layout_above="@id/main_bottom_navigation"
-                layout="@layout/match_list"
-                tools:visibility="gone"
-        />
-        <include
-                android:id="@+id/main_results_layout"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:layout_above="@id/main_bottom_navigation"
-                layout="@layout/results"
-                tools:visibility="gone"
-        />
-
-        <android.support.design.widget.BottomNavigationView
-                android:id="@+id/main_bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="bottom"
-                app:elevation="4dp"
-                app:itemBackground="@color/grey_300"
-                app:menu="@menu/main"/>
-    </RelativeLayout>
+            app:elevation="4dp"
+            app:itemBackground="@color/grey_300"
+            app:menu="@menu/main"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main_content_container"/>
 
     <ProgressBar
             android:id="@+id/main_progress_bar"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="parent"/>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
