--- a/app/src/main/res/layout/match_list.xml
+++ b/app/src/main/res/layout/match_list.xml
@@ -44,6 +44,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintBottom_toTopOf="@+id/match_list_empty_message"
             android:layout_marginBottom="8dp"/>
+
     <TextView
             android:id="@+id/match_list_empty_message"
             android:layout_width="wrap_content"
@@ -75,7 +76,8 @@
             android:id="@+id/match_list_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_add_black_24dp"
             android:layout_margin="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
