--- a/app/src/main/res/layout/players_list.xml
+++ b/app/src/main/res/layout/players_list.xml
@@ -75,7 +75,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/ic_add_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
