--- a/app/src/main/res/layout/match_content.xml
+++ b/app/src/main/res/layout/match_content.xml
@@ -6,7 +6,7 @@
         android:id="@+id/create_match_content_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:showIn="@layout/create_match">
+        tools:showIn="@layout/match_container">
 
 
     <ImageView
