--- a/app/src/main/res/layout/match_container.xml
+++ b/app/src/main/res/layout/match_container.xml
@@ -3,6 +3,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -29,6 +30,7 @@
             android:id="@+id/match_progress_bar"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:visibility="gone"/>
 
 </RelativeLayout>
